add img and css banner

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class="line3"></div>
         </div>
     </nav>
-
+    <section class="banner">
+        <img src="img/ngoding.jpg" alt="gambar banner">
+    </section>
     <script src="script.js"></script>
 </body>
 
