--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
-    <title>NAVBAR</title>
+    <title>Web PC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,6 +31,19 @@
     <section class="banner">
         <img src="img/ngoding.jpg" alt="gambar banner">
     </section>
+
+    <main>
+        <article>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores facere veritatis nobis voluptatibus
+            alias, error inventore commodi nulla deserunt vero? Doloremque minima eaque voluptate officia maxime! Maxime
+            voluptatum laudantium nesciunt perferendis perspiciatis quisquam repellendus doloribus asperiores
+            reprehenderit debitis sunt delectus, nemo ratione eius facilis quos doloremque consequatur? Id mollitia rem
+            ipsam numquam incidunt, quibusdam magnam dolore quos voluptatum neque, dolorem modi. Officia itaque quam
+            minus! Consequatur incidunt aut non tempore quia quos ipsa itaque, hic repellat veniam perferendis
+            reiciendis in omnis voluptates eius ipsum autem tenetur facere voluptatum ea? Ullam itaque odit soluta
+            debitis quasi praesentium quibusdam esse recusandae porro.
+        </article>
+    </main>
     <script src="script.js"></script>
 </body>
 
