--- a/index.html
+++ b/index.html
@@ -32,18 +32,143 @@
         <img src="img/ngoding.jpg" alt="gambar banner">
     </section>
 
-    <main>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores facere veritatis nobis voluptatibus
-            alias, error inventore commodi nulla deserunt vero? Doloremque minima eaque voluptate officia maxime! Maxime
-            voluptatum laudantium nesciunt perferendis perspiciatis quisquam repellendus doloribus asperiores
-            reprehenderit debitis sunt delectus, nemo ratione eius facilis quos doloremque consequatur? Id mollitia rem
-            ipsam numquam incidunt, quibusdam magnam dolore quos voluptatum neque, dolorem modi. Officia itaque quam
-            minus! Consequatur incidunt aut non tempore quia quos ipsa itaque, hic repellat veniam perferendis
-            reiciendis in omnis voluptates eius ipsum autem tenetur facere voluptatum ea? Ullam itaque odit soluta
-            debitis quasi praesentium quibusdam esse recusandae porro.
-        </article>
-    </main>
+    <div class="content">
+        <h2>Tentang admin</h2>
+        <p class="author">Hello world, Selamat datang di Amazing Website, tempat untuk para programer, Mahasiswa,
+            Siswa atau siapa saja yang ingin mencari inspirasi dan
+            motivasi. website ini dibuat oleh <a href="#">kamhar ngado</a> dibuat pada server lokal pada 20
+            desember 2019 kemudian pertama publish di server online pada xx bulan tahun xxx. Website ini saya buat
+            dengan menggunakan HTML, CSS, front-end: Javascript, back-end: node.js
+            Nama saya kamhar ngado saya seorang self-taugh developer, pecandu ngoding, YouTuber,
+            penikmat kopi,
+            saya kuliah di jurusan pendidikan matematika. sewaktu dibangku perkuliahan saya hanya diajakarn
+            Matlab, dan saya sangat tertarik dengan itu namun yang diajarkan hanyalah sebatas operasi matriks saja,
+            setelah mengutak atik Matlab timbulah rasa penasaran saya yang tinggi dan timbullah pertanyaan dibenak
+            pikirin saya apakah semua software dan website dibuat dengan Matlab? setelah
+            saya tanyakan ke paman Google ternyata tidak, saya menemukan jawaban yang sangat beragam, sewaktu itu sy
+            tidak tau apa itu HTML, public static void, yang saya tau untuk membuat software menggunakan visual
+            studio dan saya tidak mengenal apa itu bahasa program. Saya sangat tertarik dengan dunia hacker karena
+            bisa
+            menjebol website dan pikir itu keren. Mulailah saya searching di internet "cara menjadi hacker" dan yang
+            saya temukan adalah sql injection, dark web. disini mulailah saya mengenal sql injection dan untuk
+            mendapatkan website kategori vulnerable saya mulai berselancar di dark web, setelah mendapatkan -+
+            10.000
+            website dengan kategori vulnerable saya mencoba 1 website katakanlah website x pada username: 'terserah'
+            dan password: OR 1=1, Amazing saya bisa menjebol website x, namun saya makin penasaran apa itu OR 1=1 ?
+            setelah saya searching saya malah tambah pusing karena saya tidak mengetuhi PHP dan Mysql. setelah
+            kegalauan dan ingin mengisi waktu kosong saya ingin membuat kalkulator menggunakan visual studio.
+            awalnya saya
+            hanya mengikuti tutorial di youtube apa yang diketik oleh si programmer itu juga yang saya ketik di
+            form c#, setelah menghabiskan waktu 3 jam mengikuit tutorial dengan durasi
+            15 menit di Youtube, saya run program pertama saya you know after 3 hours nothing yang saya dapat adalah
+            error, saya coba cocokan kodenya baris per baris dan saya run kedua kalinya Amazing jadi kalkulator.
+            saya sangat senang dan makin penasaran disini saya mulai mengenal bahasa program, mulailah saya mengetik
+            di google "top 10 programming language 2017".
+        </p>
+    </div>
+
+    <div class="bahasa">
+        <h4>Top 10 programming language 2017</h4>
+        <ol>
+            <li><a href="#">Java</a></li>
+            <li><a href="#">Python</a></li>
+            <li><a href="#">Javascript</a></li>
+            <li><a href="#">python</a></li>
+            <li><a href="#">C#</a></li>
+            <li><a href="#">PHP</a></li>
+            <li><a href="#">C++</a></li>
+            <li><a href="#">C</a></li>
+            <li><a href="#">Swift</a></li>
+            <li><a href="#">Go</a></li>
+        </ol>
+    </div>
+
+    <div class="text">
+        <p>setelah saya mengetahui bahwa di waktu itu Java adalah bahasa program top notch saya mulai belajar java dari
+            basic
+            hingga saat ini saya semakin pede dengan kemampuan bahasa java saya, setelah itu saya pelajari lagi bahasa
+            program yang
+            lain seperti yang ada website saya saat ini, Jadi jika kalian udah bisa 1 bahasa program mau pindah ke
+            bahasa
+            program
+            yang lain akan sangat mudah, dan jika kalian ingin belajar bahasa program kalian harus tau dulu tujuan
+            kalian
+            belajar
+            bahasa program itu untuk apa?. Contoh jika mau belajar bahasa program untuk aplikasi mobile maka yang
+            dipilih
+            adalah
+            Java, Kotlin, C#. Jika ingin ke Kecerdasan buatan pilih Python. jika ingin ke website pilih HTML, CSS,
+            Javascript,
+            node.Js/PHP. Di Amazing website ini sy akan memberikan ke kalian secara gratis dasar-dasar bahasa programa
+            yang
+            sudah
+            saya sebutkan sebelumnya dan karena saya dari pendidikan matematika saya berikan juga tips-tips mengerjakan
+            soal
+            matematika, smp, sma dan perguruan tinggi.Oh iya sorry ngga ada coments di website saya karena you know lah
+            hosting
+            murahan kalau saya pake komen akan menghabiskan psycal memory saya jika punya pertanyaan langsung saja ke
+            instagram Saya</p>
+    </div>
+
+
+    <div class="tabel">
+        <h2>Tools yang saya gunakan</h2>
+        <table class="center">
+            <tr>
+                <td>Java</td>
+                <td>(eclips, netbeans)</td>
+            </tr>
+            <tr>
+                <td>Kotlin</td>
+                <td>(intellij idea, android studio)</td>
+            </tr>
+            <tr>
+                <td>python</td>
+                <td>(anaconda, vscode, pycharm)</td>
+            </tr>
+            <tr>
+                <td>C#</td>
+                <td>(visual studio, unity)</td>
+            </tr>
+            <tr>
+                <td>HTML, CSS, Javascript</td>
+                <td>(vscode, notepad++, google, xampp, git, github)</td>
+            </tr>
+            <td>Latext</td>
+            <td>(TexLive, vscode, Texstudio)</td>
+            </tr>
+            </tr>
+            <td>Matematika</td>
+            <td>(Moodle, Maxima, Geogebra, sympy, R)</td>
+            </tr>
+            </tr>
+            <td>YouTube</td>
+            <td>(photoshop, premiere, Bandicam, OBS studio)</td>
+            </tr>
+            </tr>
+            <td>Laptop</td>
+            <td>(Toshiba NB530 intel atom, Lenovo i7 v330-14IKB, ram 4GB dual
+                chanel, GPU amd Radeon)</td>
+            </tr>
+            </tr>
+            <td>Keybord</td>
+            <td>(fantech spartan)</td>
+            </tr>
+            </tr>
+            <td>Operating System</td>
+            <td>(windows 7, windows 10, linux kubuntu)</td>
+            </tr>
+            </tr>
+            <td>android app development</td>
+            <td>(smarphone vivo v7, vysor, usb cable data)</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="footer">
+        <p>&copy; Copyright 2019. Penguin Coding</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
